--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -33,19 +33,12 @@
 					</td>
 					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
-					<!-- いいね機能 -->
+		  <!-- いいね機能 -->
           <td>
-            <% if book.favorited_by?(current_user) %>
-              <%= link_to book_favorites_path(book), method: :delete do %>
-                <span class="glyphicon glyphicon-heart"><%= book.favorites.count%></span>
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(book), method: :post do %>
-                <span class="glyphicon glyphicon-heart-empty"><%= book.favorites.count %></span>
-              <% end %>
-            <% end %>
-          </td>
-					<!-- いいね機能 -->
+          	<div id="likes_buttons_<%= @book %>">
+            <%= render 'favorites/favorite', book: book %>
+            </div>
+		  <!-- いいね機能 -->
           <td>コメント数：<%= book.book_comments.count %></td>
 				</tr>
 				<% end %>
