--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,15 +24,10 @@
 					<td><%= @book.body %></td>
 					<!-- いいね機能 -->
           <td>
-            <% if @book.favorited_by?(current_user) %>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                <span class="glyphicon glyphicon-heart"><%= @book.favorites.count%></span>
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                <span class="glyphicon glyphicon-heart-empty"><%= @book.favorites.count %></span>
-              <% end %>
-            <% end %>
+            <div id="likes_buttons_<%= @book %>">
+            <%#= render 'favorites/favorite', book: @book %>
+            <%= render 'favorites/favorite', book: @book %>
+            </div>
           </td>
 					<!-- いいね機能 -->
 					<td>コメント数：<%= @book.book_comments.count %></td>
@@ -44,31 +39,10 @@
 				</tr>
 			</table>
 			<!-- コメント一覧 -->
-			<table>
-      <% @book_comments.each do |book_comment| %>
-        <tr>
-          <td class="show-comment">
-            <%= link_to user_path(book_comment.user), class: "user_#{book_comment.user.id}" do %>
-              <%= attachment_image_tag book_comment.user, :profile_image, fallback: "no_image.jpg", size: "50x50" %><br>
-              <%= book_comment.user.name %>
-            <% end %>
-          </td>
-          <td class="show-comment"><%= book_comment.comment %></td>
-          <% if current_user == book_comment.user %>
-            <td><%= link_to 'Destroy', book_book_comment_path(@book, book_comment), class: 'btn-sm btn-danger', method: :delete %></td>
-          <% end %>
-        </tr>
-      <% end %>
-    </table>
-
-    <div class="comment-form">
-      <%= form_for [@book, @book_comment] do |f| %>
-        <%= f.text_area :comment, size: "90x5" %>
-        <%= f.submit '送信', class: "btn-sm btn-primary" %>
-      <% end %>
-    </div>
-
-    <!-- コメント一覧 -->
+			<div id="books_comment_<%= @book %>">
+            <%= render 'book_comments/comment', book_comments: @book_comments, book_comment: @book_comment, book: @book %>
+            </div>
+            <!-- コメント一覧 -->
 	</div>
 </div>
 
