--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -16,7 +16,8 @@
     </table>
 
     <div class="comment-form">
-      <%= form_for [book, book_comment], remote: true do |f| %>
+      <%= form_with model: [book, book_comment], remote: true do |f| %>
+      <%#= form_for [book, book_comment], remote: true do |f| %>
         <%= f.text_area :comment, size: "90x5" %>
         <%= f.submit '送信', class: "btn-sm btn-primary" %>
       <% end %>
